Fixed z-index and escaping issue.

--- a/biodig/web/static_v2/css/taggable.css
+++ b/biodig/web/static_v2/css/taggable.css
@@ -71,6 +71,7 @@
 	min-height: 40px;
 	width: 100%;
 	position: absolute;
+	z-index: 1000;
 }
 
 .toolbar-icon {
